feat: integrate AlphaBot UI, dual-agent system, and streaming chat fixes

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@
 # Copy this file to .env and fill in your real values
 
 OPENROUTER_API_KEY=your-openrouter-api-key-here
+
+# Alpaca Markets Data
+ALPACA_API_KEY=your-alpaca-key
+ALPACA_SECRET_KEY=your-alpaca-secret
+ALPACA_ENDPOINT=https://paper-api.alpaca.markets
